update database schema